--- a/index.scss
+++ b/index.scss
@@ -9,6 +9,10 @@
     display: none;
 }
 
+*{
+    scrollbar-width: none;
+}
+
 body{
     scroll-behavior: smooth;
     font-family: 'B612', sans-serif;
@@ -322,6 +326,8 @@ body{
             border-radius: 4px;
             height: 30px;
             width: 30px;
+            margin: 0;
+            padding: 0;
         }
     }
     .skills{
