--- a/index.css
+++ b/index.css
@@ -28,6 +28,10 @@
   display: none;
 }
 
+* {
+  scrollbar-width: none;
+}
+
 body {
   scroll-behavior: smooth;
   font-family: 'B612', sans-serif;
@@ -462,6 +466,8 @@ body {
   border-radius: 4px;
   height: 30px;
   width: 30px;
+  margin: 0;
+  padding: 0;
 }
 
 #aboutMeDiv .skills {
