--- a/index.scss
+++ b/index.scss
@@ -5,6 +5,83 @@
     to {transform: translate3d(0,0px,0); opacity: 1;}
 }
 
+@media only screen and (max-width: 600px) {
+    #annoucement{
+        display: none;
+    }
+    .sideBar{
+        z-index: 1;
+        width: 100vw;
+        bottom: 0;
+        height: 60px;
+        flex-direction: row;
+        .categoryName, h2, hr{
+            display: none;
+        }
+    }
+    .mainBody{
+        margin-left: 0px;
+    }
+    .categorySelection{
+        width: 100%;
+        aspect-ratio: 1/1;
+        justify-content: center;
+        margin: 2px;
+        span{
+            margin-left: 0px;
+        }
+    }
+    .feature{
+        align-items: center;
+        width: 100%;
+        img{
+            width: 300px;
+        }
+        h3{
+            display: none;
+        }
+    }
+    .pageHeader{
+        flex-direction: column;
+    }
+    .user{
+        flex-direction: column;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    .sideBar{
+        height: 100vh;
+        left: 0;
+        width: 170px;
+        flex-direction: column;
+        padding: 16px;
+    }
+    .mainBody{
+        margin-left: 200px;
+    }
+    .categorySelection{
+        width: 100%;
+        height: 40px;
+        margin-bottom: 4px;
+        span{
+            margin-left: 12px;
+        }
+    }
+    .feature{
+        background-color: #191414ab;
+        width: 180px;
+        img{
+            width: 180px;
+            height: 180px;
+            border-radius: 8px;
+        }
+    }
+    .pageHeader{
+        flex-direction: row;
+    }
+}
+
 ::-webkit-scrollbar{
     display: none;
 }
@@ -19,16 +96,14 @@ body{
 }
 
 .mainContainer{
-    display: flex;
     height: 100vh;
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
 .sideBar{
-    padding: 16px;
-    height: 100%;
-    width: 12%;
+    display: flex;
+    position: fixed;
     color: white;
     background-color: black;
     h2{
@@ -37,11 +112,10 @@ body{
         margin-left: 8px;
     }
     .categorySelection{
+        float: left;
         display: flex;
         align-items: center;
         border-radius: 4px;
-        height: 40px;
-        margin-bottom: 4px;
         transition: 0.2s ease-out;
         &-selected{
             @extend .categorySelection;
@@ -56,7 +130,6 @@ body{
         }
         span{
             vertical-align: middle;
-            margin-left: 12px;
         }
         .categoryName{
             font-weight: 700;
@@ -75,9 +148,10 @@ body{
         margin-bottom: 12px;
     }
 }
+
 .mainBody{
+    padding: 16px;
     height: 100%;
-    width: 98%;
     background-image: linear-gradient(to bottom, #27394B, #121212);
 }
 
@@ -254,7 +328,7 @@ body{
 }
 
 .educationPart {
-    width: 700px;
+    width: 100%;
     height: fit-content;
     border-radius: 8px;
     background-color: #19141431;
@@ -288,7 +362,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1200px;
+    width: 80%;
     height: 80%;
     border-radius: 32px;
     transition: 0.05s ease-in;
@@ -374,14 +448,11 @@ body{
         margin-left: auto;
         margin-right: auto;
         .feature{
-            margin: 32px;
             float: left;
-            text-align: center;
             padding: 8px;
             border-radius: 8px;
-            background-color: #191414ab;
+            text-align: center;
             height: 300px;
-            width: 180px;
             margin: 8px;
             transition: 0.2s ease-out;
             &:hover{
@@ -389,11 +460,11 @@ body{
                 transform: scale(1.08);
             }
             img{
-                width: 180px;
-                height: 180px;
                 border-radius: 8px;
             }
-
+            h3{
+                margin: 8px;
+            }
         }
     }
 }
