--- a/index.scss
+++ b/index.scss
@@ -47,6 +47,9 @@
     .user{
         flex-direction: column;
     }
+    #pageNameText{
+        font-size: 16pt;
+    }
 }
 
 @media only screen and (min-width: 600px) {
@@ -68,9 +71,14 @@
             margin-left: 12px;
         }
     }
+    #featuredDiv{
+        margin-top: 64px;
+    }
     .feature{
+        float: left;
         background-color: #191414ab;
         width: 180px;
+        text-align: center;
         img{
             width: 180px;
             height: 180px;
@@ -79,6 +87,15 @@
     }
     .pageHeader{
         flex-direction: row;
+    }
+    #pageNameText{
+        font-size: 50pt;
+    }
+    .page{
+        padding: 32px;
+    }
+    .pageHeaderInfo{
+        margin-left: 16px;
     }
 }
 
@@ -213,7 +230,6 @@ body{
 
 .page{
     align-items: center;
-    padding: 32px;
     opacity: 1;
     overflow: scroll;
     height: 85%;
@@ -264,12 +280,10 @@ body{
         }
         .pageHeaderInfo{
             color: white;
-            margin-left: 16px;
             display: flex;
             flex-direction: column-reverse;
             align-items: baseline;
             #pageNameText{
-                font-size: 50pt;
                 font-weight: 1800;
                 margin: 0;
             }
@@ -435,7 +449,6 @@ body{
 
 
 #featuredDiv{
-    margin-top: 64px;
     margin-left: auto;
     margin-right: auto;
     height: fit-content;
@@ -448,10 +461,8 @@ body{
         margin-left: auto;
         margin-right: auto;
         .feature{
-            float: left;
             padding: 8px;
             border-radius: 8px;
-            text-align: center;
             height: 300px;
             margin: 8px;
             transition: 0.2s ease-out;
