--- a/index.scss
+++ b/index.scss
@@ -5,6 +5,39 @@
     to {transform: translate3d(0,0px,0); opacity: 1;}
 }
 
+@keyframes categoryStartX {
+    from{
+        transform: translateX(-250px);
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+@keyframes categoryStartY {
+    from{
+        transform: translateY(50px);
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+@keyframes featureStart {
+    from{
+        transform: rotateZ(-10deg);
+        opacity: 0;
+    }
+    to{
+        transform: rotateZ(0deg);
+        opacity: 1;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     #annoucement{
         display: none;
@@ -23,6 +56,9 @@
         margin-left: 0px;
     }
     .categorySelection{
+        opacity: 0;
+        transform: translateY(-50px);
+        animation: categoryStartY 0.3s ease-out;
         width: 100%;
         aspect-ratio: 1/1;
         justify-content: center;
@@ -33,9 +69,10 @@
     }
     .feature{
         align-items: center;
-        width: 100%;
+        float: left;
+        width: 40%;
         img{
-            width: 300px;
+            width: 100%;
         }
         h3{
             display: none;
@@ -49,6 +86,9 @@
     }
     #pageNameText{
         font-size: 16pt;
+    }
+    .myMajor{
+        font-size: 4pt;
     }
 }
 
@@ -64,6 +104,9 @@
         margin-left: 200px;
     }
     .categorySelection{
+        opacity: 0;
+        transform: translateX(-250px);
+        animation: categoryStartX 0.3s ease-out;
         width: 100%;
         height: 40px;
         margin-bottom: 4px;
@@ -78,6 +121,7 @@
         float: left;
         background-color: #191414ab;
         width: 180px;
+        height: 300px;
         text-align: center;
         img{
             width: 180px;
@@ -129,6 +173,8 @@ body{
         margin-left: 8px;
     }
     .categorySelection{
+        animation-fill-mode: forwards;
+        animation-delay: calc(var(--order) * 100ms);
         float: left;
         display: flex;
         align-items: center;
@@ -404,6 +450,12 @@ body{
     }
     .info{
         margin-left: 16px;
+        .myName{
+            font-size: 24pt;
+        }
+        .myMajor{
+            font-size: 20pt;
+        }
         .contactDetails{
             padding: 0;
             font-weight: 400;
@@ -431,10 +483,15 @@ body{
         h6{
             margin-bottom: 0px;
         }
+        ul{
+            list-style: none;
+        }
         li{
             float:left;
-            margin: 32px;
-            padding: 2px;
+            margin-right: 16px;
+            margin-bottom: 16px;
+            margin-left: 16px;
+            width: 130px;
         }
     }
     .skill{
@@ -461,14 +518,16 @@ body{
         margin-left: auto;
         margin-right: auto;
         .feature{
+            animation: featureStart 0.3s ease-out;
+            animation-fill-mode: backwards;
+            animation-delay: calc(var(--order)*100ms);
             padding: 8px;
             border-radius: 8px;
-            height: 300px;
             margin: 8px;
             transition: 0.2s ease-out;
             &:hover{
                 transition: 0.2s ease-out;
-                transform: scale(1.08);
+                transform: scale(1.08) ;
             }
             img{
                 border-radius: 8px;
