--- a/index.css
+++ b/index.css
@@ -24,6 +24,84 @@
   }
 }
 
+@-webkit-keyframes categoryStartX {
+  from {
+    -webkit-transform: translateX(-250px);
+            transform: translateX(-250px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@keyframes categoryStartX {
+  from {
+    -webkit-transform: translateX(-250px);
+            transform: translateX(-250px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@-webkit-keyframes categoryStartY {
+  from {
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@keyframes categoryStartY {
+  from {
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@-webkit-keyframes featureStart {
+  from {
+    -webkit-transform: rotateZ(-10deg);
+            transform: rotateZ(-10deg);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
+    opacity: 1;
+  }
+}
+
+@keyframes featureStart {
+  from {
+    -webkit-transform: rotateZ(-10deg);
+            transform: rotateZ(-10deg);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
+    opacity: 1;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   #annoucement {
     display: none;
@@ -45,6 +123,11 @@
     margin-left: 0px;
   }
   .categorySelection, .sideBar .categorySelection-selected {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    -webkit-animation: categoryStartY 0.3s ease-out;
+            animation: categoryStartY 0.3s ease-out;
     width: 100%;
     aspect-ratio: 1/1;
     -webkit-box-pack: center;
@@ -59,10 +142,11 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    width: 100%;
+    float: left;
+    width: 40%;
   }
   .feature img {
-    width: 300px;
+    width: 100%;
   }
   .feature h3 {
     display: none;
@@ -82,6 +166,9 @@
   #pageNameText {
     font-size: 16pt;
   }
+  .myMajor {
+    font-size: 4pt;
+  }
 }
 
 @media only screen and (min-width: 600px) {
@@ -99,6 +186,11 @@
     margin-left: 200px;
   }
   .categorySelection, .sideBar .categorySelection-selected {
+    opacity: 0;
+    -webkit-transform: translateX(-250px);
+            transform: translateX(-250px);
+    -webkit-animation: categoryStartX 0.3s ease-out;
+            animation: categoryStartX 0.3s ease-out;
     width: 100%;
     height: 40px;
     margin-bottom: 4px;
@@ -113,6 +205,7 @@
     float: left;
     background-color: #191414ab;
     width: 180px;
+    height: 300px;
     text-align: center;
   }
   .feature img {
@@ -173,6 +266,10 @@ body {
 }
 
 .sideBar .categorySelection, .sideBar .categorySelection-selected {
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-delay: calc(var(--order) * 100ms);
+          animation-delay: calc(var(--order) * 100ms);
   float: left;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -561,6 +658,14 @@ body {
   margin-left: 16px;
 }
 
+#aboutMeDiv .info .myName {
+  font-size: 24pt;
+}
+
+#aboutMeDiv .info .myMajor {
+  font-size: 20pt;
+}
+
 #aboutMeDiv .info .contactDetails {
   padding: 0;
   font-weight: 400;
@@ -598,10 +703,16 @@ body {
   margin-bottom: 0px;
 }
 
+#aboutMeDiv .skills ul {
+  list-style: none;
+}
+
 #aboutMeDiv .skills li {
   float: left;
-  margin: 32px;
-  padding: 2px;
+  margin-right: 16px;
+  margin-bottom: 16px;
+  margin-left: 16px;
+  width: 130px;
 }
 
 #aboutMeDiv .skill {
@@ -635,9 +746,14 @@ body {
 }
 
 #featuredDiv .featured .feature {
+  -webkit-animation: featureStart 0.3s ease-out;
+          animation: featureStart 0.3s ease-out;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+  -webkit-animation-delay: calc(var(--order)*100ms);
+          animation-delay: calc(var(--order)*100ms);
   padding: 8px;
   border-radius: 8px;
-  height: 300px;
   margin: 8px;
   -webkit-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
