--- a/index.scss
+++ b/index.scss
@@ -528,6 +528,7 @@ body{
             &:hover{
                 transition: 0.2s ease-out;
                 transform: scale(1.08) ;
+                filter: hue-rotate(35deg);
             }
             img{
                 border-radius: 8px;
