--- a/index.css
+++ b/index.css
@@ -764,6 +764,8 @@ body {
   transition: 0.2s ease-out;
   -webkit-transform: scale(1.08);
           transform: scale(1.08);
+  -webkit-filter: hue-rotate(35deg);
+          filter: hue-rotate(35deg);
 }
 
 #featuredDiv .featured .feature img {
